--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html">webstudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -18,36 +18,45 @@
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:110001111111"></a>+11 (000) 111-11-11</li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a><br>
+                </li>
             </ul>
         </address>
     </header>
     <main>
+
+        <section>
         <h1>Effective Solutions
         for Your Business</h1>
         <button type="button">Order Service</button>
-        
+        </section>
+
         <section>
+            <h2>advantages</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
                 <p>Our goal is to identify the business
-                problem to walk away with the perfect and creative solution.</p>
+                problem to walk away with the perfect and creative solution.
+                </p>
                 </li>
 
                 <li>
                     <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
+                </p>
                 </li>
 
                 <li>
                     <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                </p>
                 </li>
 
                 <li>
                     <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                </p>
                 </li>
 
             </ul>
@@ -57,15 +66,15 @@
             <h2>Our Team</h2>
                 <ul>
                     <li><img src="./images/img-mark.jpg"
-                        alt="Mark Guerrero"
+                        alt="man-with-beard"
                         width="264"
                         height="260"/>
                         <h3>Mark Guerrero</h3>
-                        <p>Product Designe</p>
+                        <p>Product Designer</p>
                     </li>
 
                     <li><img src="./images/img-tom.jpg" 
-                        alt="Tom Ford"
+                        alt="young-man-smiling"
                         width="264"
                         height="260"/>
                         <h3>Tom Ford</h3>
@@ -73,7 +82,7 @@
                     </li>
 
                     <li><img src="./images/img-camila.jpg" 
-                        alt="Camila Garcia"
+                        alt="gitl-in-pink"
                         width="264"
                         height="260"/>
                         <h3>Camila Garcia</h3>
@@ -81,7 +90,7 @@
                     </li>
 
                     <li><img src="./images/img-daniel.jpg" 
-                        alt="Daniel Wilson"
+                        alt="man-in-a gray-t-shirt"
                         width="264"
                         height="260"/>
                         <h3>Daniel Wilson</h3>
@@ -92,7 +101,7 @@
     </main>
 
     <footer>
-        <a href=".index.html">WebStudio</a>
+        <a href="./index.html">webstudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
