--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">webstudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -18,7 +18,7 @@
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111 11 11</a><br>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a><br>
                 </li>
             </ul>
         </address>
@@ -94,14 +94,14 @@
                         width="264"
                         height="260"/>
                         <h3>Daniel Wilson</h3>
-                        <p>UI Designe</p>
+                        <p>UI Designer</p>
                     </li>
                 </ul>
         </section>
     </main>
 
     <footer>
-        <a href="./index.html">webstudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
