--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section>
             <h2 class="portfolio-list">Our Portfolio</h2>
             <ul>
-                <li>
+                <li class="portfolio-list-items">
                     <img src="./images/img-bank.jpg" 
                     alt="internet-bank-screen" 
                     width="360">
