--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1 class="hero-title">Effective Solutions
         for Your Business</h1>
         <div>
-        <button class="button-order" type="button">Order Service</button>
+        <button type="button" class="button-order">Order Service</button>
         </div>
         </section>
 
@@ -77,7 +77,7 @@
         <section class="our-team">
             <h2 class="title-team">Our Team</h2>
                 <ul>
-                    <li><img src="./images/img-mark.jpg"
+                    <li class="img-our-team"><img src="./images/img-mark.jpg"
                         alt="man-with-beard"
                         width="264"
                         height="260"/>
@@ -85,7 +85,7 @@
                         <p class="profession">Product Designer</p>
                     </li>
 
-                    <li><img src="./images/img-tom.jpg" 
+                    <li class="img-our-team"><img src="./images/img-tom.jpg" 
                         alt="young-man-smiling"
                         width="264"
                         height="260"/>
@@ -93,7 +93,7 @@
                         <p class="profession">Frontend Developer</p>
                     </li>
 
-                    <li><img src="./images/img-camila.jpg" 
+                    <li class="img-our-team"><img src="./images/img-camila.jpg" 
                         alt="gitl-in-pink"
                         width="264"
                         height="260"/>
@@ -101,7 +101,7 @@
                         <p class="profession">Marketing</p>
                     </li>
 
-                    <li><img src="./images/img-daniel.jpg" 
+                    <li class="img-our-team"><img src="./images/img-daniel.jpg" 
                         alt="man-in-a gray-t-shirt"
                         width="264"
                         height="260"/>
